Finished to implement to visual algorithm